# CrewAI_Assistant

./: .gitignore  PLANS.md  README.md  requirements.txt  run.py  setup.py
agent_assistant/: README.md  pyproject.toml  testchat.py
agent_assistant/knowledge/: conversation_history.txt  ideas.txt  memories.txt  user_preference.txt
agent_assistant/src/agent_assistant/: crew.py  main.py  memory.py  task_manager.py  tasks.json  test.py
agent_assistant/src/agent_assistant/config/: tasks.yaml
agent_assistant/src/agent_assistant/knowledge/: conversation_history.txt  ideas.txt  memories.txt
agent_assistant/src/agent_assistant/tools/: memory_tool.py
config/: agents.yaml  tasks.yaml
knowledge/: daily_logs.json  memories.json
knowledge/youtube/: U4PsIm9dDvs.txt  U4PsIm9dDvs_embeddings.json  YMPzDiraNnA.txt  YMPzDiraNnA_embeddings.json  m6KnVTYtSc0.txt  m6KnVTYtSc0_embeddings.json
src/agent_assistant/: config.py  crew.py  main.py  memory.py  performance.py  task_manager.py
src/agent_assistant/config/: agents.yaml  tasks.yaml
src/agent_assistant/tools/: conversation_tools.py  memory_tool.py  memory_tools.py  task_tools.py  youtube_tool.py
src/voice_chat/: voice_chat.py
tests/: main_test.py  test.py  test_agents.py
